--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <app-header></app-header>
 <main>
   <app-about></app-about>
-  <app-projects></app-projects>
+  <!--<app-projects></app-projects>-->
   <app-experience></app-experience>
   <app-contact></app-contact>
 </main>
