headshot and dark mode

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,6 +1,6 @@
-<section id="about" class="about-section">
+<section id="about" @fadeIn class="about-section">
   <div class="about-container">
-    <img src="portfolio-app\src\assets\headshot.jfif" alt="Mouad Elmellouki" class="profile-pic" />
+    <img src="assets/headshot.png" alt="Mouad Elmellouki" class="profile-pic" />
     <div class="about-content">
       <h1>Hi, I'm Mouad Elmellouki</h1>
       <p>
