--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<section id="contact" class="contact-section">
+<section id="contact" @fadeIn class="contact-section">
   <h2>Contact</h2>
   <p>Have a project idea, opportunity, or just want to connect? Feel free to reach out!</p>
 
