--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,10 @@
-
-<header>
-    <nav>
-        <a (click)="scrollTo('about')">About</a>
-        <a (click)="scrollTo('projects')">Projects</a>
-        <a (click)="scrollTo('experience')">Experience</a>
-        <a (click)="scrollTo('contact')">Contact</a>        
+<header class="navbar">
+    <div class="logo">mouad.</div>
+    <nav class="nav-links">
+      <a (click)="scrollTo('about')">About</a>
+      <!--<a (click)="scrollTo('projects')">Projects</a>-->
+      <a (click)="scrollTo('experience')">Experience</a>
+      <a (click)="scrollTo('contact')">Contact</a>
     </nav>
-</header>
+  </header>
+  
