--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,11 @@
-<router-outlet>
-<app-header></app-header>
-<main>
-  <app-about></app-about>
-  <!--<app-projects></app-projects>-->
-  <app-experience></app-experience>
-  <app-contact></app-contact>
-</main>
-<app-footer></app-footer>
-</router-outlet>
+<!--<ng-particles [id]="'tsparticles'" [options]="particlesOptions"></ng-particles>-->
+<div class="scroll-container">
+  <app-header></app-header>
+  <main>
+    <app-about></app-about>
+    <!--<app-projects></app-projects>-->
+    <app-experience></app-experience>
+    <app-contact></app-contact>
+  </main>
+  <app-footer></app-footer>
+</div>
