--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer>
-    <p>© 2025 Mouad Elmellouki | Built with Angular, HTML, CSS, and TypeScript</p>
-</footer>
+    <p>© 2025 Mouad Elmellouki</p>
+  </footer>
