--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,10 @@
 <header class="navbar">
-    <div class="logo">mouad.</div>
-    <nav class="nav-links">
-      <a (click)="scrollTo('about')">About</a>
-      <!--<a (click)="scrollTo('projects')">Projects</a>-->
-      <a (click)="scrollTo('experience')">Experience</a>
-      <a (click)="scrollTo('contact')">Contact</a>
-    </nav>
-  </header>
-  
+  <div class="logo">mouad.</div>
+  <nav>
+    <a href="#about">About</a>
+    <a href="#education">Education</a>
+    <a href="#experience">Experience</a>
+    <a href="#skills">Skills</a>
+    <a href="#contact">Contact</a>
+  </nav>
+</header>
