--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,22 +1,23 @@
-<section id="experience" @fadeIn>
+<section id="experience" class="section-card">
   <h2>Experience</h2>
-
   <div class="experience-cards">
-    
-    <a href="https://www.grapevineai.app" target="_blank" class="experience-card">
-      <h3>Grapevine AI – Software Developer</h3>
-      <p>Designed and deployed backend systems using FastAPI, integrated AWS services, and secured cloud resources with IAM.</p>
+    <a href="https://grapevineai.app" target="_blank" class="experience-card">
+      <h3>Software Developer &#64; Grapevine AI</h3>
+      <p>Developed and deployed a backend system for posting academic content and student organization updates, using FastAPI.</p>
+      <p>Configured AWS API Gateway as a secure proxy for managing HTTP requests.</p>
+      <p>Utilized AWS S3 for secure media storage and DynamoDB for structured metadata management.</p>
+      <p>Led security efforts, implementing IAM roles, access control, and authentication best practices.</p>
     </a>
-
     <div class="experience-card">
-      <h3>VA Cyber Navigator Program – Information Security Intern</h3>
-      <p>Performed penetration testing and vulnerability scanning on election infrastructure. Drafted SSP and IRP documentation.</p>
+      <h3>Information Security Intern &#64; VA Cyber Navigator Program</h3>
+      <p>Performed penetration tests and vulnerability scans using Nmap, Acunetix, and Wireshark on local election infrastructure.</p>
+      <p>Assisted in configuring and deploying security tools to enhance system integrity and meet LESS compliance.</p>
+      <p>Reviewed and helped construct a System Security Plan (SSP), Incident Response Plan (ISP), and Remediation Plan for the locality to help meet security standard baselines.</p>
     </div>
-
     <div class="experience-card">
-      <h3>University of Virginia – Teaching Assistant</h3>
-      <p>Taught students in CS 2130/3120 covering C/C++, assembly, memory safety.</p>
+      <h3>Teaching Assistant &#64; UVA</h3>
+      <p>Led tutorials on computer architecture, assembly language, C, and basic C++.</p>
+      <p>Assisted students in debugging low-level security vulnerabilities and understanding memory safety risks.</p>
     </div>
-
   </div>
 </section>
